Fix animal sniffer error.